# fdaPDE-core

./: .gitignore
fdaPDE/: spack.yaml
fdaPDE/geometry/: simplex.h
mumps_testing/: CMakeLists.txt  main.cpp  matrix_generator.sh  run_tests.sh  user_config.cmake
mumps_testing/computation_times/: CMakeLists.txt  compile_code.sh  compile_code_cluster.sh  gen_data_mesh.sh  gen_data_rand.sh  generate_data.sh  user_config.cmake
mumps_testing/computation_times/cluster_jobs/: job_name.slurm  mesh.slurm
mumps_testing/computation_times/data/: computation_times.csv  computation_times_schur.csv  computation_times_spd.csv  data.csv  rand_computation_times_vs_raw.csv  schur_data.csv
mumps_testing/computation_times/data/sparsity_patterns/: sparsity_pattern_1000_0.000500.csv  sparsity_pattern_1000_0.001000.csv  sparsity_pattern_1000_0.005000.csv  sparsity_pattern_1000_0.010000.csv  sparsity_pattern_1000_0.050000.csv  sparsity_pattern_1000_0.100000.csv  sparsity_pattern_100_0.000500.csv  sparsity_pattern_100_0.001000.csv  sparsity_pattern_10_0.050000.csv  sparsity_pattern_10_0.100000.csv  sparsity_pattern_5000_0.000500.csv  sparsity_pattern_5000_0.001000.csv  sparsity_pattern_500_0.000500.csv  sparsity_pattern_500_0.010000.csv  sparsity_pattern_500_0.050000.csv  sparsity_pattern_500_0.100000.csv  sparsity_pattern_50_0.000500.csv  sparsity_pattern_50_0.001000.csv  sparsity_pattern_50_0.005000.csv  sparsity_pattern_50_0.010000.csv  sparsity_pattern_50_0.050000.csv
mumps_testing/computation_times/data/sparsity_patterns/diffusion_transport/: diffusion_transport_10.csv  diffusion_transport_100.csv  diffusion_transport_50.csv
mumps_testing/computation_times/data/spd_sparsity_patterns/: spd_sparsity_pattern_1000_0.001000.csv  spd_sparsity_pattern_1000_0.005000.csv  spd_sparsity_pattern_1000_0.010000.csv  spd_sparsity_pattern_1000_0.100000.csv  spd_sparsity_pattern_100_0.000500.csv  spd_sparsity_pattern_100_0.005000.csv  spd_sparsity_pattern_100_0.010000.csv  spd_sparsity_pattern_10_0.100000.csv  spd_sparsity_pattern_5000_0.000500.csv  spd_sparsity_pattern_5000_0.001000.csv  spd_sparsity_pattern_5000_0.010000.csv  spd_sparsity_pattern_500_0.050000.csv  spd_sparsity_pattern_50_0.000500.csv  spd_sparsity_pattern_50_0.050000.csv  testspd_sparsity_pattern_1000_10.csv  testspd_sparsity_pattern_1000_100.csv  testspd_sparsity_pattern_1000_1000.csv  testspd_sparsity_pattern_1000_50.csv  testspd_sparsity_pattern_1000_500.csv  testspd_sparsity_pattern_100_10.csv  testspd_sparsity_pattern_100_100.csv  testspd_sparsity_pattern_100_50.csv  testspd_sparsity_pattern_10_10.csv  testspd_sparsity_pattern_5000_10.csv  testspd_sparsity_pattern_5000_100.csv  testspd_sparsity_pattern_5000_1000.csv  testspd_sparsity_pattern_5000_50.csv  testspd_sparsity_pattern_5000_500.csv  testspd_sparsity_pattern_5000_5000.csv  testspd_sparsity_pattern_500_10.csv  testspd_sparsity_pattern_500_100.csv  testspd_sparsity_pattern_500_50.csv  testspd_sparsity_pattern_500_500.csv  testspd_sparsity_pattern_50_10.csv  testspd_sparsity_pattern_50_50.csv
mumps_testing/computation_times/src/: computation_times.cpp  gen_data.cpp  gen_data_mesh.cpp  gen_data_rand.cpp
mumps_testing/computation_times/src/utils/: mesh_generation.h
mumps_testing/data/: CMakeLists.txt  matrix_LU.mtx  matrix_RR_deficient.mtx  matrix_Schur.mtx  matrix_deficient.mtx  matrix_fullrank.mtx  matrix_fullrank2.mtx  matrix_fullrank_inv.mtx  matrix_spd.mtx  matrix_spd_inv.mtx
mumps_testing/data/src/: matrix_generator.cpp
mumps_testing/src/: MumpsBLR_test.cpp  MumpsLDLT_test.cpp  MumpsLU_test.cpp  MumpsRR_test.cpp  MumpsSchur_test.cpp  Mumps_set_vs_vec.cpp
mumps_testing/src/utils/: rand_indices.h
(+33 files in other folders)
